<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteBackground"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/loginpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="24dp"
        android:text="@string/friends"
        android:textAlignment="center"
        android:textColor="@color/tanBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/email_container"
        android:layout_width="342dp"
        android:layout_height="305dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="321dp"
        android:background="@color/transparentYellow"
        android:elevation="100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpage">

        <EditText
            android:id="@+id/editTextFriendName"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="135dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/friendname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@+id/send_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextFriendEmail"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginBottom="18dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/friendemail"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@+id/preview_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/preview_button"
            android:layout_width="246dp"
            android:layout_height="43dp"
            android:layout_marginBottom="15dp"
            android:text="@string/preview"
            app:layout_constraintBottom_toTopOf="@+id/send_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="246dp"
            android:layout_height="43dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="70dp"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFriendName" />

        <TextView
            android:id="@+id/textViewPreview"
            android:layout_width="311dp"
            android:layout_height="43dp"
            android:layout_marginTop="21dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>